# EventNotify

./: .gitignore  CMakeLists.txt  EventManager.cpp  EventManager.h
Code/: EventCode.h  EventManager.h  EventManagerExample.cpp  main.cpp
